# vector-extra

./: .gitignore  LICENSE  cabal.project  vector-extra.cabal
Data/Vector/Extra/: IxTransform.hs  Nubox.hs  Unbox.hs
